Divide by partials, enable navigation, fix bug of header hide main

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,4 +1,9 @@
 
-.active a{
-  color: red !important;
+
+#sidebar {
+  top: 60px !important;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  background-color: orange !important;
 }
