--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,9 +1,20 @@
 
 
+
+main {
+  position: absolute;
+  top: 60px !important;
+}
+
 #sidebar {
+  /* position: absolute; */
   top: 60px !important;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
   background-color: orange !important;
+}
+
+footer > div {
+  clear: left;
 }
