--- a/views/shopping.ejs
+++ b/views/shopping.ejs
@@ -1,10 +1,13 @@
 <%- include("partials/header.ejs") %>
 <%- include("partials/Sidebar.ejs") %>
-  
-      <!-- Content -->
-      <div class="content mt-5 bg-body p-5 w-100">
-        shopping:
-      </div>
-
-      <%- include("partials/footer.ejs") %>
+        
+<!-- Content -->
+<div class="content mt-4 bg-body p-5">
+  <p>
+    Shoppingg
+          
+  </p>
+</div>
+<%- include("partials/footer.ejs") %>
+            
       
