--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,8 +17,8 @@
         <h1 class="text-white">TO-DO LIST</h1>
     </div>
   </header> -->
-
-  <header>
+  <section id="title">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="px-3 py-2 text-bg-dark border-bottom fixed-top">
       <div class="container">
         <div class="d-flex align-items-center my-lg-0 me-lg-auto text-white text-decoration-none justify-content-center py-1">
@@ -28,7 +28,8 @@
         </div>
       </div>
     </div>
-  </header>
+  </nav>
+  </section>
   
 
 
