--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,9 +1,9 @@
 
   <!-- Sidebar -->
-  <div class="row">
+  <section class="row">
     <main class="d-flex flex-nowrap bg-body-tertiary">  
     
-      <div id="sidebar" class="sticky-top align-self-start pt-5
+      <nav id="sidebar" class="sticky-top align-self-start pt-5
       d-flex flex-column flex-shrink-0 p-3 col-lg-2 col">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
           <!-- <svg class="bi pe-none me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg> -->
@@ -48,5 +48,9 @@
             </a>
           </li>
         </ul>
-      </div>
+
+        <footer style="clear: left;" class="pt-5 my-5 text-body-secondary border-top">
+          Created by Linoy © 2023
+        </footer>
+      </nav>
       
