--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -6,12 +6,15 @@
   -webkit-transition: all .3s;
   -o-transition: all .3s;
   transition: all .3s;
+  padding-right: 15px !important;
+  padding-left: 15px !important;
 }
 
 main {
   position: absolute;
   top: 60px !important;
   padding-right: 0px !important;
+  padding-left: 0px !important;
 }
 
 #sidebar {
@@ -19,10 +22,18 @@ main {
   top: 60px !important;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link, button {
   background-color: orange !important;
 }
 
 footer > div {
   position: static;
+}
+
+input[type="text"], textarea {
+  border: none !important;
+}
+
+button {
+  border: none !important;
 }
