--- a/views/partials/task.ejs
+++ b/views/partials/task.ejs
@@ -1,10 +1,14 @@
+
+<form action="/shopping/checkbox" method="post"  id="checkboxForm">
 <label class="list-group-item d-flex gap-3">
-    <input class="form-check-input flex-shrink-0" type="checkbox" value="" style="font-size: 1.375em;">
-    <span class="pt-1 form-checked-content">
-      <strong><%= task %></strong>
-      <small class="d-block text-body-secondary">
-        <svg class="bi me-1" width="1em" height="1em"><use xlink:href="#alarm"></use></svg>
-        <div class="note"><%= note %></div>
-      </small>
-    </span>
-  </label>
+  <input type="hidden" name="number" value=<%=index%> >
+  <input onChange="this.form.submit()" class="form-check-input flex-shrink-0" type="checkbox" style="font-size: 1.375em;" <%= checked %>>
+  <span class="pt-1 form-checked-content">
+    <strong><%= task %></strong>
+    <small class="d-block text-body-secondary">
+      <svg class="bi me-1" width="1em" height="1em"><use xlink:href="#alarm"></use></svg>
+      <div class="note"><%= note %></div>
+    </small>
+  </span>
+</label>
+</form>
