--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,3 +1,16 @@
+#content  {
+  /* background-image: url("../images/bg.jpg"); */
+  background-attachment: fixed;
+
+    /* Full height */
+    height: 100%; 
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 
 #content {
   width: 100%;
